remove persistence redis

--- a/cluster/apps/paperless/paperless/helm-release.yaml
+++ b/cluster/apps/paperless/paperless/helm-release.yaml
@@ -88,6 +88,8 @@ spec:
       architecture: "standalone"
       auth:
         enabled: false
+      persistence:
+        enabled: false
     service:
       gotenburg:
         enabled: true
