fix redis disable persistence

--- a/cluster/apps/home/paperless/helm-release.yaml
+++ b/cluster/apps/home/paperless/helm-release.yaml
@@ -90,8 +90,9 @@ spec:
       architecture: "standalone"
       auth:
         enabled: false
-      persistence:
-        enabled: false
+      master:
+        persistence:
+          enabled: false
     service:
       gotenburg:
         enabled: true
