fix redis disable persistence

--- a/cluster/apps/home/paperless/helm-release.yaml
+++ b/cluster/apps/home/paperless/helm-release.yaml
@@ -62,11 +62,11 @@ spec:
       data:
         enabled: true
         existingClaim: home-nfs-pvc
-        subPath: "{{ .Release.Name }}/data"
+        subPath: paperless/data
       media:
         enabled: true
         existingClaim: home-nfs-pvc
-        subPath: "{{ .Release.Name }}/media"
+        subPath: paperless/media
     podSecurityContext:
       fsGroup: ${FS_GROUP}
     additionalContainers:
