--- a/cluster/apps/flux-system/webhook/github/ingress.yaml
+++ b/cluster/apps/flux-system/webhook/github/ingress.yaml
@@ -4,8 +4,11 @@ kind: Ingress
 metadata:
   name: webhook-receiver
   annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-production
+    external-dns.alpha.kubernetes.io/target: ipv4.${CLUSTER_DOMAIN}
     external-dns/is-public: "true"
-    external-dns.alpha.kubernetes.io/target: "ipv4.${CLUSTER_DOMAIN}"
+    kubernetes.io/ingress.class: traefik
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure
 spec:
   ingressClassName: "nginx"
   rules:
