--- a/cluster/apps/cert-manager/kustomization.yaml
+++ b/cluster/apps/cert-manager/kustomization.yaml
@@ -1,6 +1,7 @@
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: cert-manager
 resources:
-  - issuers
-  - helm-release.yaml
+  - dashboard
+  - prometheus-rule.yaml
