--- a/cluster/apps/home/emqx/helm-release.yaml
+++ b/cluster/apps/home/emqx/helm-release.yaml
@@ -20,6 +20,7 @@ spec:
     recreatePods: true
     image:
       repository: emqx/emqx
+      tag: 4.4.3
 
     emqxConfig:
       EMQX_ALLOW_ANONYMOUS: "false"
