--- a/cluster/apps/monitoring/botkube/helm-release.yaml
+++ b/cluster/apps/monitoring/botkube/helm-release.yaml
@@ -27,6 +27,8 @@ spec:
       recommendations: true
       settings:
         clustername: k8s
+        kubectl:
+          enabled: true
       resources:
         - name: v1/pods
           namespaces:
@@ -139,20 +141,6 @@ spec:
             includeDiff: true
             fields:
               - spec.template.spec.containers[*].image
-        - name: batch/v1/jobs
-          namespaces:
-            include:
-              - all
-          events:
-            - create
-            - update
-            - delete
-            - error
-          updateSetting:
-            includeDiff: true
-            fields:
-              - spec.template.spec.containers[*].image
-              - status.conditions[*].type
         - name: rbac.authorization.k8s.io/v1/roles
           namespaces:
             include:
