tune arr alarms

--- a/cluster/apps/monitoring/loki/helm-release.yaml
+++ b/cluster/apps/monitoring/loki/helm-release.yaml
@@ -101,7 +101,7 @@ spec:
               summary: "{{ $labels.app }} is experiencing malformed database disk image issues"
           - alert: ArrFailedToConnectToPlex
             expr: |
-              sum by (app) (count_over_time({app=~".*arr"} |~ "Failed to Update Plex host|Unable to connect to Plex Media Server"[30m])) > 0
+              sum by (app) (count_over_time({app=~".*arr"} |~ "(?i)failed|unable" |~ "(?i)plex"[30m])) > 0
             for: 2m
             labels:
               severity: warning
@@ -110,7 +110,7 @@ spec:
               summary: "{{ $labels.app }} is having trouble connecting to Plex Media Server"
           - alert: ArrFailedToConnectToProwlarr
             expr: |
-              sum by (app) (count_over_time({app=~".*arr"} |~ "Connection refused|currently unavailable" |= "prowlarr:9696"[30m])) > 0
+              sum by (app) (count_over_time({app=~".*arr"} |~ "(?i)connection refused|currently unavailable" |= "(?i)prowlarr:9696"[5m])) > 0
             for: 2m
             labels:
               severity: warning
