--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -16,6 +16,7 @@ resources:
   - jetstack-charts.yaml
   - k8s-at-home-charts.yaml
   - k8s-gateway-charts.yaml
+  - kasten-charts.yaml
   - kubernetes-dashboard-charts.yaml
   - longhorn-charts.yaml
   - metallb-charts.yaml
