--- a/cluster/core/kustomization.yaml
+++ b/cluster/core/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - namespaces
   - cert-manager
   - csi-driver-nfs
+  - kasten-io
   - kube-system
   - kubernetes-dashboard
   - longhorn-system
