--- a/cluster/core/namespaces/kustomization.yaml
+++ b/cluster/core/namespaces/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - cert-manager.yaml
   - csi-driver-nfs.yaml
   - home.yaml
+  - kasten-io.yaml
   - kubernetes-dashboard.yaml
   - longhorn-system.yaml
   - media.yaml
