--- a/cluster/core/kasten-io/k10/config/policies/kustomization.yaml
+++ b/cluster/core/kasten-io/k10/config/policies/kustomization.yaml
@@ -2,7 +2,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - config
-  - helm-release.yaml
-  - monitoring
-  - persistent-volume.yaml
+  - k10-disaster-recovery-policy.yaml
