--- a/cluster/core/kasten-io/k10/config/profiles/kustomization.yaml
+++ b/cluster/core/kasten-io/k10/config/profiles/kustomization.yaml
@@ -2,7 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - config
-  - helm-release.yaml
-  - monitoring
-  - persistent-volume.yaml
+  - persistent-volume-claim.yaml
+  - k10-disaster-recovery.yaml
