--- a/cluster/apps/media/calibre/helm-release.yaml
+++ b/cluster/apps/media/calibre/helm-release.yaml
@@ -2,14 +2,14 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: calibre-web
+  name: calibre
 spec:
   interval: 5m
   chart:
     spec:
       # renovate: registryUrl=https://k8s-at-home.com/charts/
-      version: 8.3.0
-      chart: calibre-web
+      version: 5.3.0
+      chart: calibre
       sourceRef:
         kind: HelmRepository
         name: k8s-at-home-charts
@@ -24,8 +24,8 @@ spec:
       retries: 3
   values:
     image:
-      repository: linuxserver/calibre-web
-      tag: version-0.6.12
+      repository: ghcr.io/linuxserver/calibre
+      tag: version-v5.41.0
     env:
       TZ: ${TZ}
     ingress:
