--- a/cluster/core/kasten-io/k10/secret.sops.yaml
+++ b/cluster/core/kasten-io/k10/secret.sops.yaml
@@ -2,8 +2,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: k10-secrets
+    name: k10-dr-secrets
 stringData:
+    key: ENC[AES256_GCM,data:Zs2uOXcBVa1zy1CaUL+0qv/jPCnxoob+7+uFkCF52E489T3mpqsgr9cmqYWk3B9sA3m0CQ4X8R8KGX68QUhkN8XOoPPXLvM5coSVbdQkvSYsgXwzLcdwTA8FjbbGJstq+iMFhw==,iv:O8C83qXyJzcGR7++NMRU+qMA0Iz+tFQPt5jeralMjS0=,tag:tVF+Q2CbQtsxxj1Twafd9A==,type:str]
     cluster_id: ENC[AES256_GCM,data:9vgFLMSXnN0xTDzZCvOnunWxOXhL5XHK4unpToeuB7N3VrYt,iv:FBEqzFlxmUZsXjO/13Mquv1zkpGkxF4y8XptQq8euIQ=,tag:B4C4oP8eNiEIk6yHVu1TCQ==,type:str]
 sops:
     kms: []
@@ -20,8 +21,8 @@ sops:
             c0U1TGJpWG9telpQZ2NuVGloRmJEL1kKEhWjonj5KgXWCQY9CMQ6//r1I/bf6NSe
             EPVDob1sHdqp7puo30yF6O1eM2MfVAZPqQd7feDPimB3m2vn1LhCZA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-02T04:45:40Z"
-    mac: ENC[AES256_GCM,data:UZ46wWcqvuwbBm52dJrzkiyb/V8FI67n7nO6zAAsGE8haiEPd6R6X0Wsz++RhvZDVT/FcdY51WqEm7BO76mLUNR2jVGm3OrKJe/rfYTLu9k3Wi/SZXgRnq/AhU3IKB7TmWJWa8SuRVPIWZ23tJIHvLPU3Srci9VWGKSSGZdFdjw=,iv:5RPseQjOoJU4qaoTDZmZLi8MBxWPDhHqfJIhCy1GW3E=,tag:u/F8yo8kNRiYlrQJxEhedQ==,type:str]
+    lastmodified: "2022-05-02T05:13:14Z"
+    mac: ENC[AES256_GCM,data:SFmALpq52m/SSHUdYzVObu9EaIwLByU0gLDGPf7cX/dv0qgpdI5Q5hAkrSKdJFium67qf9w0C3AdcI2w5dba8FmVDxJOE+jSNlZEGF29XuEBfuokukyig0xQDnVQvmt7TB4pYQgnS97L37CPjM2eEaJtPmNtVS+anJ+KxiB0bf8=,iv:HeAYgp81mcU4AMoEl5Z0D/O38hsAu2XK5IW6AUe1zfk=,tag:YvNBIUSWEfdteRcYq0gHZg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
