add homer reloader

--- a/cluster/apps/home/homer/helm-release.yaml
+++ b/cluster/apps/home/homer/helm-release.yaml
@@ -21,6 +21,9 @@ spec:
       tag: 22.02.2
       pullPolicy: IfNotPresent
 
+    podAnnotations:
+      configmap.reloader.stakater.com/reload: homer-config
+
     env:
       TZ: ${TZ}
 
