--- a/cluster/core/kasten-io/k10/secret.sops.yaml
+++ b/cluster/core/kasten-io/k10/secret.sops.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: k10-dr-secrets
+    name: k10-dr-secret
 stringData:
     key: ENC[AES256_GCM,data:Zs2uOXcBVa1zy1CaUL+0qv/jPCnxoob+7+uFkCF52E489T3mpqsgr9cmqYWk3B9sA3m0CQ4X8R8KGX68QUhkN8XOoPPXLvM5coSVbdQkvSYsgXwzLcdwTA8FjbbGJstq+iMFhw==,iv:O8C83qXyJzcGR7++NMRU+qMA0Iz+tFQPt5jeralMjS0=,tag:tVF+Q2CbQtsxxj1Twafd9A==,type:str]
     cluster_id: ENC[AES256_GCM,data:9vgFLMSXnN0xTDzZCvOnunWxOXhL5XHK4unpToeuB7N3VrYt,iv:FBEqzFlxmUZsXjO/13Mquv1zkpGkxF4y8XptQq8euIQ=,tag:B4C4oP8eNiEIk6yHVu1TCQ==,type:str]
@@ -21,8 +21,8 @@ sops:
             c0U1TGJpWG9telpQZ2NuVGloRmJEL1kKEhWjonj5KgXWCQY9CMQ6//r1I/bf6NSe
             EPVDob1sHdqp7puo30yF6O1eM2MfVAZPqQd7feDPimB3m2vn1LhCZA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-02T05:13:14Z"
-    mac: ENC[AES256_GCM,data:SFmALpq52m/SSHUdYzVObu9EaIwLByU0gLDGPf7cX/dv0qgpdI5Q5hAkrSKdJFium67qf9w0C3AdcI2w5dba8FmVDxJOE+jSNlZEGF29XuEBfuokukyig0xQDnVQvmt7TB4pYQgnS97L37CPjM2eEaJtPmNtVS+anJ+KxiB0bf8=,iv:HeAYgp81mcU4AMoEl5Z0D/O38hsAu2XK5IW6AUe1zfk=,tag:YvNBIUSWEfdteRcYq0gHZg==,type:str]
+    lastmodified: "2022-05-02T06:17:58Z"
+    mac: ENC[AES256_GCM,data:x3g8OrcrwUfnQjqO9mde2O//4NaMYWx5wZKAjwzToqkwFhMta0SGTmiMGJKRC4zCa5LxePAh1ZTUGqfKQPocKE/fUgQw3fg/1ddXb7wiU4vJZ8YaJW3tRRtL+W3y3dhPTxSxciOK+pKXtaex4+er/W4mkfsBIQIsGWXsVe5Nqk8=,iv:YKETEIDX0grpwfJCt9K2LyZfGwuKo3YIKvLE9/YJ878=,tag:Ah4/xODop+jWEgdAw3KDbQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
