--- a/cluster/apps/monitoring/botkube/helm-release.yaml
+++ b/cluster/apps/monitoring/botkube/helm-release.yaml
@@ -34,6 +34,7 @@ spec:
             ignore:
               - kube-system
               - kasten-io
+              - networking
           events:
             - create
             - delete
