--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -24,6 +24,9 @@ spec:
   upgrade:
     remediation:
       retries: 3
+  valuesFrom:
+    - kind: Secret
+      name: traefik-helm-secrets
   values:
     image:
       name: ghcr.io/k8s-at-home/traefik
@@ -79,11 +82,12 @@ spec:
         minVersion: VersionTLS12
         maxVersion: VersionTLS13
         sniStrict: true
-    pilot:
-      enabled: false
     experimental:
       plugins:
-        enabled: false
+        enabled: true
+        rewrite-body:
+          modulename: "github.com/packruler/rewrite-body"
+          version: "v0.5.1"
     resources:
       requests:
         memory: 100Mi
