--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -32,7 +32,8 @@ spec:
       name: ghcr.io/k8s-at-home/traefik
     deployment:
       kind: Deployment
-      replicas: 1
+      replicas: 2
+      minReadySeconds: 15
     service:
       enabled: true
       type: LoadBalancer
@@ -66,6 +67,11 @@ spec:
       - "--providers.kubernetescrd.allowexternalnameservices=true"
       - "--experimental.plugins.plugin-rewritebody.modulename=github.com/packruler/rewrite-body"
       - "--experimental.plugins.plugin-rewritebody.version=v0.5.1"
+      - "--provides.file.directory=/config"
+    volumes:
+      - name: traefik-helm-config-map
+        type: configMap
+        mountPath: /config
     ports:
       traefik:
         expose: true
