turn down traefik logging

--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -43,7 +43,7 @@ spec:
     logs:
       general:
         format: json
-        level: DEBUG
+        level: ERROR
       access:
         enabled: true
         format: json
