theme all the apps

--- a/cluster/apps/networking/traefik/config-map.yaml
+++ b/cluster/apps/networking/traefik/config-map.yaml
@@ -9,7 +9,7 @@ data:
     http:
       middlewares:
         #  Add any suppported base apps you would like to include in your auto generated middle set. "sonarr" and "radarr are the examples here.
-        {{ range $index, $app := list "sonarr" "radarr" }}
+        {{ range $index, $app := list "sonarr" "radarr" "lidarr" "readarr" "prowlarr" "bazarr" "overseerr" "tautulli" "nzbget" "qbittorrent" "bitwarden" }}
         {{ $app }}-theme-css:
           plugin:
             rewritebody:
