--- a/cluster/apps/networking/traefik/config-map.yaml
+++ b/cluster/apps/networking/traefik/config-map.yaml
@@ -39,7 +39,7 @@ data:
           chain:
             middlewares:
               - theme-headers
-              - {{ $app }}-theme-css
+              - {{ $app }}-4k-theme-css
         {{ end }}
 
   headers.yml: |
