--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -11,6 +11,10 @@ stringData:
     SECRET_EMQX_ADMIN_PASSWORD: ENC[AES256_GCM,data:bFla41tySt80xNXRZch/idr+AtQ4joxVk40PgBMuOfrYVWAmgGt0Rw==,iv:EbjaA8yjXNScSv3xtNvJTnyEZiftLIuPydp25UAngLI=,tag:Z3LxYyRgU6VyXEXhN6/Yhg==,type:str]
     SECRET_MQTT_USERNAME: ENC[AES256_GCM,data:bVyNnw==,iv:Vhnm4c+d/qFcDvaZdVOMP3dvHnzl1SEuPUF7mHOaQA0=,tag:T95ZzGnjXKWnTiLf7rpuAQ==,type:str]
     SECRET_MQTT_PASSWORD: ENC[AES256_GCM,data:exV2hmp89mvc8tyQ322V+5M18usWQs6tlHmladwge/LK1N+mlto/Vw==,iv:VasKJxjt5rXltxBkUfNahuk5MVY9o8CvsGGFhSDDLQ8=,tag:l73y63BLj3yvAoeyzHgXSg==,type:str]
+    SMTP_HOST: ENC[AES256_GCM,data:13tf9K2o/+74RZShpoc=,iv:gl1WDZZa/6+VDjBKWI89CeL65NUR31cKWp6adP/jZXw=,tag:WbiQIHqZwyO3QUoEP90HzA==,type:str]
+    SMTP_FROM: ENC[AES256_GCM,data:I+hp95eu/J8QeLQzBh80+wdm,iv:lbBRFBVutJASP7Qq3TPsg8pmaOdWASDx6KFnearHgQM=,tag:8+643s0Uj/FRU+h/Py5D6g==,type:str]
+    SMTP_USERNAME: ENC[AES256_GCM,data:Uzu6tJI1OCZYMK+5,iv:PATilIaQz7mxdol3QrDUCO7kByPLDgtql/QvO2u7hDk=,tag:WBtjRss3PYGsbBviYG32Og==,type:str]
+    SMTP_PASSWORD: ENC[AES256_GCM,data:TR6H+CbZ9/8cmqKjWZWG7A==,iv:kLmFnm5h9A7Sxbyt3HV6u+mR2361TznzJwoZa00LlWQ=,tag:2ldMN0t05h1vP/8Jg5rYmg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -26,8 +30,8 @@ sops:
             dmI2WGo1U3Zsajh0SW1NdDVQSzdta00K62QXC1trBAOuX0AJKxlvuhcnWmMiqYOC
             TFsZ7rtqxrhaGFVYkMz2CqUTcwIWrd42tFKN3Ue1GkdTXzvMSBJDBQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-01T00:41:07Z"
-    mac: ENC[AES256_GCM,data:ZrTTghmYbfRph/EigvVb4R/+JLM5vSIwhNXhrNe+reUZ7Qso7CFA1f8NkWC2k5Z6q30XG2omVto5968RebpWjOJiWKPJwjqrWZelYp0hW56gJVm6KpnPTdeAyHFgjkwcKIrMOT9gR9FV4TN9utDDpp7QX5x7jJzcNqg5njLbN6I=,iv:4B8Wf/fSzKVbfnX1bQRZBd05xWQeh3uA8pi41WMzgLM=,tag:4EbwIHK7J8nikF29/CDunw==,type:str]
+    lastmodified: "2022-05-03T05:30:55Z"
+    mac: ENC[AES256_GCM,data:rdesKs5OyG+KkbHe1k+Jb1gfM+2CQ2Ow7Xb4Fr8TQE1LYwHJJVHPgD9BA+teb0xBF3hNd7RpY0tmu4NSZJl/Z5c/xJrLp6V4aqFfzHKs4UpCVyDzumEIrCmEaUzrU7JFK5RF1AsP0WxYVEGpWSJV3Xdlp3sXih6JkI7xhBwi/VA=,iv:btzN+dH6CrpedKONvClbcUpCoT3262M/A/rOJCSHjYg=,tag:Id5Q9qbWULDO++3DYZtXag==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
